fix image align

--- a/sass/elements/_teatro.scss
+++ b/sass/elements/_teatro.scss
@@ -14,7 +14,7 @@
 			width: 100%;
 			height: auto;
 			left: 0;
-			bottom: 0;
+			top: -50%;
 		}
 	}
 
